# ai_games

./: .gitignore  Cargo.toml  README.md  a.out  setup.py  test.rs
ai_games/: .gitignore  Cargo.toml
ai_games/gamedef/src/: game_interface.rs  lib.rs
ai_games/proc-gamedef/src/: lib.rs
ai_games/public/: profile.html
ai_games/public/script/: admin.js  common.js  profile.js
ai_games/public/style/: global.css
ai_games/res/client_files/: interact_lib.py
ai_games/res/test/: half_smart.py  oxo.py
ai_games/src/: main.rs
ai_games/src/games/: mod.rs  oxo.rs
ai_games/src/isolate/: sandbox.rs
ai_games/src/langs/: javascript.rs  mod.rs  python.rs
ai_games/src/players/: auto_exec.rs  mod.rs  player.rs  player_list.rs
ai_games/src/util/: asyncio.rs
ai_games/src/web/: api.rs
gamedef/: Cargo.toml
gamedef/src/: game_interface.rs  parser.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231103_000001_create_agent.rs  m20231105_000001_create_user.rs  m20231105_000002_create_agent.rs  m20231107_000003_add_partial.rs  m20231229_000004_add_color.rs
proc-gamedef/: Cargo.toml
proc-gamedef/src/: lib.rs
public/: index.html  login.html  submit.html
public/script/: admin.js  agent.js  client_files.js  common.js  game.js  index.js  leaderboard.js  login.js  profile.js  submit.js
public/style/: admin.css  agent.css  client_files.css  game.css  global.css  leaderboard.css  login.css  profile.css  submit.css
res/: template.html
res/client_files/: interact_lib.hpp  interact_lib.py
res/configs/: fours.json  (+2 more)
src/: main.rs
web_interface/: index.html
(+47 files in other folders)
