[package]
name = "ai_games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
env_logger = "0.11.5"
futures = "0.3.30"
gamedef = { path = "gamedef" }
log = "0.4.19"
proc-gamedef = { path = "proc-gamedef" }
migration = { path = "migration" }
rand = "0.8.5"
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.128"
lazy_static = "1.5.0"
sea-orm = { version = "1.0.1", features = ["sqlx-sqlite", "runtime-async-std-native-tls", "macros" ]}
deadpool = { version = "0.12.1", features = ["unmanaged", "rt_async-std_1"]}
colors-transform = "0.2.11"
urlencoding = "2.1.3"
pollster = "0.3.0"
rand_chacha = "0.3.1"
url_encor = "1.0.2"

[dependencies.async-std]
version = "1.13.0"
features = ["unstable", "std", "async-process"]
